--- a/Project-Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project-Files/VS2010/MeteoroidGame.vcxproj
@@ -12,6 +12,10 @@
       <Configuration>Debug</Configuration>
       <Platform>PS3</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="Debug|PSVita">
+      <Configuration>Debug</Configuration>
+      <Platform>PSVita</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|Tegra-Android">
       <Configuration>Debug</Configuration>
       <Platform>Tegra-Android</Platform>
@@ -27,6 +31,10 @@
     <ProjectConfiguration Include="Release|PS3">
       <Configuration>Release</Configuration>
       <Platform>PS3</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Release|PSVita">
+      <Configuration>Release</Configuration>
+      <Platform>PSVita</Platform>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|Tegra-Android">
       <Configuration>Release</Configuration>
@@ -127,6 +135,18 @@
     <LibraryPath>../../../vingine-core/Libraries</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|PS3'">
+    <OutDir>$(SolutionDir)..\..\Build\$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)..\..\Temp Files\$(Platform)_$(Configuration)\</IntDir>
+    <TargetName>$(ProjectName)_$(Configuration)</TargetName>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|PSVita'">
+    <LibraryPath>../../../vingine-core/Libraries</LibraryPath>
+    <OutDir>$(SolutionDir)..\..\Build\$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)..\..\Temp Files\$(Platform)_$(Configuration)\</IntDir>
+    <TargetName>$(ProjectName)_$(Configuration)</TargetName>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|PSVita'">
+    <LibraryPath>../../../vingine-core/Libraries</LibraryPath>
     <OutDir>$(SolutionDir)..\..\Build\$(Platform)\</OutDir>
     <IntDir>$(SolutionDir)..\..\Temp Files\$(Platform)_$(Configuration)\</IntDir>
     <TargetName>$(ProjectName)_$(Configuration)</TargetName>
@@ -235,6 +255,28 @@
     <ClCompile>
       <AdditionalIncludeDirectories>..\..\..\vingine-core\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|PSVita'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>..\..\..\vingine-core\</AdditionalIncludeDirectories>
+      <CppExceptions>true</CppExceptions>
+      <CppLanguageStd>Cpp11</CppLanguageStd>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
+    </ClCompile>
+    <Link>
+      <AdditionalDependencies>../../Libraries/Vingine Core_$(Configuration).a;</AdditionalDependencies>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|PSVita'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>..\..\..\vingine-core\</AdditionalIncludeDirectories>
+      <CppExceptions>true</CppExceptions>
+      <CppLanguageStd>Cpp11</CppLanguageStd>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
+    </ClCompile>
+    <Link>
+      <AdditionalDependencies>../../Libraries/Vingine Core_$(Configuration).a;</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Code\CollisionComponent2D.hpp" />
