--- a/Project-Files/VS2010/AndroidManifest.xml
+++ b/Project-Files/VS2010/AndroidManifest.xml
@@ -6,10 +6,10 @@
         android:versionName="1.0">
 
     <!-- This is the platform API where NativeActivity was introduced. -->
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="21" />
+    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="21" />
 
     <!-- This .apk has no Java code itself, so set hasCode to false. -->
-    <application android:icon="@drawable/meteoroids_icon" android:label="@string/app_name" android:hasCode="False" android:theme="@style/Theme.DarkNoTitle">
+    <application android:icon="@drawable/meteoroids_icon" android:label="@string/app_name" android:hasCode="false" android:theme="@style/Theme.DarkNoTitle">
 
         <!-- Our activity is the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
