Removed unneeded raw assets from android's assets folder.
Added the needed options to the meteoroid game project file to enable a secure release build.
Added secure_properties for meteoroid game to the repository.

--- a/Project-Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project-Files/VS2010/MeteoroidGame.vcxproj
@@ -337,6 +337,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Tegra-Android'">
     <AntBuild>
       <Debuggable>false</Debuggable>
+      <SecurePropertiesLocation>D:\Git\meteoroid-game\Project-Files\VS2010\secure_properties.xml</SecurePropertiesLocation>
     </AntBuild>
   </ItemDefinitionGroup>
   <ItemGroup>
