Added VSL shader files for all shader passes.
Copied VSL shader files to the android build.
Made some minor fixes to the Cg Shaders to make them work on Vita.

--- a/Project-Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project-Files/VS2010/MeteoroidGame.vcxproj
@@ -391,6 +391,9 @@
     <ClCompile Include="..\..\Code\WarpSystem.cpp" />
     <ClCompile Include="..\..\Code\WeaponSystem.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Data\Shaders\Clear.vsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
