Meteors and ships are now rendered using lines instead of line loops. Some vertex array setup for meteors and ships was changed in order to make this work.
Many parts of the main rendering loop are currently commented out for stability. Some include: Viewport setting, framebuffer setting, and UI rendering.
VSL 8BitInteger names changed to 8BitUnsignedInteger to better fit what they represent.
Added all VSL files to the data folder in the project.

--- a/Project-Files/VS2010/MeteoroidGame.vcxproj
+++ b/Project-Files/VS2010/MeteoroidGame.vcxproj
@@ -392,7 +392,10 @@
     <ClCompile Include="..\..\Code\WeaponSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Data\Shaders\Basic.vsl" />
+    <None Include="..\..\Data\Shaders\BasicNoTexture.vsl" />
     <None Include="..\..\Data\Shaders\Clear.vsl" />
+    <None Include="..\..\Data\Shaders\Glow.vsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
