--- a/Project-Files/VS2010/MeteoroidGame.vcxproj.filters
+++ b/Project-Files/VS2010/MeteoroidGame.vcxproj.filters
@@ -157,5 +157,14 @@
     <None Include="..\..\Data\Shaders\Clear.vsl">
       <Filter>Data</Filter>
     </None>
+    <None Include="..\..\Data\Shaders\Basic.vsl">
+      <Filter>Data</Filter>
+    </None>
+    <None Include="..\..\Data\Shaders\BasicNoTexture.vsl">
+      <Filter>Data</Filter>
+    </None>
+    <None Include="..\..\Data\Shaders\Glow.vsl">
+      <Filter>Data</Filter>
+    </None>
   </ItemGroup>
 </Project>
